# tourism_back

./: db.sqlite3  pyproject.toml
cars/: settings.py  urls.py
engineering/: admin.py  models.py  permission.py  serializers.py  views.py
engineering/migrations/: 0003_attractions_booking_category_categoryhotel_clicks_and_more.py  0004_remove_diy_attraction_diy_attraction.py  0005_alter_categoryhotel_value.py  0006_alter_attractions_country_remove_diy_attraction_and_more.py  0007_hotel_img_alter_diy_customer.py
